<resources>
    <string name="app_name">Ecuo App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">Copyright 2015 - Ecuosoft</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuración</string>

    <!--Menu navigation-->
    <string name="Action">Configuración</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_aut">Autorización de Comp.</string>
    <string name="menu_gallery">Pedidos de Trabajo</string>
    <string name="menu_gallery6">Nuevo Pedido</string>
    <string name="menu_gallery7">Listar Pedidos</string>
    <string name="menu_gallery2">Ordenes de Trabajo</string>
    <string name="menu_gallery12">Nueva Orden</string>
    <string name="menu_gallery13">Listar Ordenes</string>
    <string name="menu_gallery5">Cotización de Compra</string>
    <string name="menu_gallery11">Fichas Técnicas</string>
    <string name="menu_gallery9">Nueva Ficha</string>
    <string name="menu_gallery10">Listar Fichas</string>
    <string name="menu_gallery3">Notificación de Alertas</string>
    <string name="menu_gallery14">Listado</string>
    <string name="menu_gallery15">Informe</string>



<!--    <string name="btn">Ingresar</string>-->
<!--    <string name="noText"> </string>-->
<!--    <string name="adv">¡Atención!</string>-->
<!--    <string name="aceptar">Aceptar</string>-->
    <string name="cancelar">Cancelar</string>
<!--    <string name="mensajeError">Mensaje para mostrar las posibles fallas o errores enviados desde el servidor.</string>-->
<!--    <string name="comp">Confirmación de comprobantes</string>-->

    <string name="emp">Empresa:</string>
    <string name="empl">Empleado:</string>
    <string name="tes">Comprobantes</string>
    <string name="suc">Sucursal:</string>
    <string name="numsuc">9</string>

    <string name="numcomp">NPI : 0001-00001869</string>
    <string name="Desfec">Fecha:</string>
    <string name="fec">15/10/2010</string>
    <string name="tot">99999</string>
    <string name="peso">$</string>
    <string name="opo">Oportunidad:</string>
    <string name="con">Contrato:</string>
    <string name="pro">Proyecto:</string>
    <string name="todo">TODO</string>
    <string name="codEmp">01</string>
    <string name="DescSucDep">Suc. Deposito:</string>
    <string name="SucDep">Libreria y         C.A.T.A. Internacional Limitadaa Bordo Diamante</string>
    <string name="server">Nombre del Servidor</string>


    <string name="Cargando">Obteniendo Componentes del Servidor.</string>
    <string name="Aguarde">Por favor, Aguade un instante.</string>
    <!--item_detalle_comp-->
    <string name="CodArt">Código:</string>
    <string name="DescArt">Descripción:</string>
    <string name="Cant">Cantidad:</string>
    <string name="Precio">Costo:</string>
    <string name="Tot">Total:</string>
    <string name="Cant1">20000.00</string>
    <string name="Precio1">kkkkj</string>
    <string name="DescArt1">kkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk</string>
    <string name="CodArt1">kkkkkk0000000jjj111</string>

    <string name="Tipo">Tipo:</string>
    <string name="Tipo1">kkkkkk0000000jjj111</string>
    <string name="Rubro">Rubro:</string>
    <string name="Rubro1">kkkkkk0000000jjj111</string>
    <string name="UnidadMedida">Unidad de Medida:</string>
    <string name="UnidadMedida1">kkkkkk0000000jjj111</string>
    <string name="Observacion">Observación:</string>


    <string name="mensajeAdv">Primero debe ingresar sus datos en configuraciones.</string>
    <string name="splashTxt2">Mucho mas que un \n software contable</string>
    <string name="aprobComp">Aprob. Comprobantes</string>
    <string name="bar_name">Ecuo Software ERP.</string>


    <!--fragment_save-->
    <string name="Ser_Pre">Servidor Predeterminado</string>
    <string name="Titulo">Configuración de Conexión</string>
    <string name="usu">Usuario</string>
    <string name="cont">Contraseña</string>

    <!-- Titulo filtro fragmentSerchComp -->
    <string name="tit">Filtro de Comprobantes</string>
    <string name="FilEmp">Empresa:</string>
    <string name="FilEmple">Empleado</string>
    <string name="ic_guardar">Guardar</string>
    <string name="ic_borrar">Eliminar</string>
    <string name="ic_borrar_All">Eliminar Todo</string>

    <!--cargar_datos_ventana-->
    <string name="dialog_btn_yes">Aceptar</string>
    <string name="dialog_btn_no">Cancelar</string>

    <!--home fragment-->
    <string name="noti">Notificaciones</string>

    <!--comp fragment-->
    <string name="ic_back">Volver</string>
    <string name="ic_send">Enviar</string>
    <string name="ic_filtrar">Filtrar</string>
    <string name="title_activity_pedidos">Pedidos de Trabajos</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!--Pedidos de trabajo-Fragment Datos -->
    <string name="tipo">Tipo de Trabajo:</string>
    <string name="fecha">Fecha y Hora: </string>
    <string name="prioridad">Prioridad:</string>
    <string name="solicitante">Solicitante:</string>
    <string name="empleado">Empleado</string>
    <string name="cliente">Cliente</string>
    <string name="solicitantecc">C.C. Solicitante:</string>
    <string name="desc">Ingrese una descripción del trabajo.</string>
    <string name="asociado">Asociado a:</string>
    <string name="noAsociado">No Asociado</string>
    <string name="equipo">Equipo</string>
    <string name="instalacion">Instalación</string>
    <string name="proyecto">Proyecto:</string>

    <!--spinner prioridad-Fragment Datos -->
    <string-array name="prioridad">
        <item>Urgente</item>
        <item>Media-Alta</item>
        <item>Normal</item>
        <item>Baja</item>
        <item>Muy Baja</item>
    </string-array>

    <!--Pedidos de trabajo-Fragment Detalle -->
    <string name="detalle">Ingrese aquí el detalle del pedido de trabajo.</string>

    <!--spinner Listar Pedidos de Trabajo-->
    <string-array name="filtroPT">
        <item>Todos los Pedidos de Trabajo</item>
        <item>Pedidos de Últimos meses</item>
        <item>Esperando Autorización</item>
        <item>Rechazados</item>
        <item>No asignados a Orden de Trabajo</item>
        <item>Asignados no Finalizados</item>
        <item>Esperando Conformidad</item>
    </string-array>
    <string name="msje">Seleccione Prioridad</string>

    <!--Listar Pedidos de Trabajo -->
    <string name="nroL">Nro</string>
    <string name="tipoL">Tipo de Trabajo:</string>
    <string name="fechaL">Fecha: </string>
    <string name="solicitanteL">Solicitante:</string>
    <string name="empleadoL">Empleado</string>
    <string name="solicitanteccL">C.C. Solicitante:</string>
    <string name="descL">Descripción:</string>
    <string name="filtroL">Proyecto:</string>
    <string name="nroPTL">00000100100100</string>

</resources>
