<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_home_black"
                android:title="@string/menu_home"/>
        <item
                android:id="@+id/nav_aut_comp"
                android:icon="@drawable/ic_comp"
                android:title="@string/menu_aut"/>

    <group android:id="@+id/group1" android:checkableBehavior="single">
        <item
                    android:id="@+id/menu_gallery1"
                    android:title="@string/menu_gallery">
            <menu>
                    <item android:id="@+id/nav_nuevo_pedido"
                            android:icon="@drawable/ic_work_black"
                            android:title="@string/menu_gallery6" />
                    <item android:id="@+id/nav_listar_pedido"
                            android:icon="@drawable/ic_ballot"
                            android:title="@string/menu_gallery7" />
<!--                    <item android:id="@+id/nav_conformidad"-->
<!--                            android:icon="@drawable/ic_done_black"-->
<!--                            android:title="@string/menu_gallery8" />-->
            </menu>
        </item>
    </group>
    <group android:id="@+id/group2" android:checkableBehavior="single">
        <item
            android:id="@+id/menu_gallery2"
            android:title="@string/menu_gallery2">
            <menu>
                <item android:id="@+id/nav_nueva_orden"
                    android:icon="@drawable/ic_work_black"
                    android:title="@string/menu_gallery12" />

                <item android:id="@+id/nav_listar_orden"
                    android:icon="@drawable/ic_ballot"
                    android:title="@string/menu_gallery13" />
            </menu>
        </item>
    </group>
    <group android:id="@+id/group3" android:checkableBehavior="single">
        <item
            android:id="@+id/menu_gallery3"
            android:title="@string/menu_gallery11">
            <menu>
                <item android:id="@+id/nav_nueva_ficha"
                    android:icon="@drawable/ic_work_black"
                    android:title="@string/menu_gallery9" />

                <item android:id="@+id/nav_listar_ficha"
                    android:icon="@drawable/ic_ballot"
                    android:title="@string/menu_gallery10" />
            </menu>
        </item>
    </group>

    <group android:id="@+id/group4" android:checkableBehavior="single">
        <item
            android:id="@+id/menu_gallery4"
            android:title="@string/menu_gallery3">
            <menu>
                <item android:id="@+id/nav_listado"
                    android:icon="@drawable/ic_work_black"
                    android:title="@string/menu_gallery14" />

                <item android:id="@+id/nav_informe"
                    android:icon="@drawable/ic_ballot"
                    android:title="@string/menu_gallery15" />
            </menu>
        </item>
    </group>
</menu>
